# madgwick_ahrs

./: CMakeLists.txt  README.md  main.c  main_ahrs.c
madgwick/: imu.c  imu.h  quaternion.h
